--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "socket.io": "^1.5.1"
   },
   "dependencies": {
-    "mongoose": "^4.12.1"
+    "mongoose": "^4.12.1",
+    "passport": "^0.4.0"
   }
 }
