removing cloudinary code from index.js

--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "socket.io": "^1.5.1"
   },
   "dependencies": {
+    "express": "^4.16.2",
+    "ip": "^1.1.5",
     "mongoose": "^4.12.1",
     "passport": "^0.4.0"
   }
