--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "socket.io": "^1.5.1"
   },
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "express": "^4.16.2",
     "ip": "^1.1.5",
     "mongoose": "^4.12.1",
