--- a/package.json
+++ b/package.json
@@ -1,31 +1,22 @@
 {
-  "name": "socket_chat_app",
-  "version": "1.0.0",
-  "description": "socket chat app",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
-  },
-  "author": "manish",
-  "license": "ISC",
-  "devDependencies": {
-    "body-parser": "^1.15.2",
-    "connect-multiparty": "^2.0.0",
-    "ejs": "^2.5.2",
-    "express": "^4.14.0",
-    "express-session": "^1.14.2",
-    "imagemagick": "^0.1.3",
-    "jade": "^1.11.0",
-    "multer": "^1.2.0",
-    "node-thumbnail": "^0.7.0",
-    "socket.io": "^1.5.1"
-  },
-  "dependencies": {
-    "connect-flash": "^0.1.1",
-    "express": "^4.16.2",
-    "ip": "^1.1.5",
-    "mongoose": "^4.12.1",
-    "passport": "^0.4.0"
+  "name": "node-authentication",
+  "main": "server.js",
+  "dependencies" : {
+    "express" : "~4.0.0",           
+    "ejs" : "~0.8.5",               
+    "mongoose" : "~3.8.1",          
+    "passport" : "~0.1.17",         
+    "passport-local" : "~0.1.6",    
+    "passport-facebook" : "~1.0.2", 
+    "passport-twitter" : "~1.0.2",  
+    "passport-google-oauth" : "~0.1.5",
+    "connect-flash" : "~0.1.1",     
+    "bcrypt-nodejs" : "latest",
+
+    "morgan": "~1.0.0",
+    "body-parser": "~1.0.0",
+    "cookie-parser": "~1.0.0",
+    "method-override": "~1.0.0",
+    "express-session": "~1.0.0"     
   }
 }
